--- a/Canvas Play/style.css
+++ b/Canvas Play/style.css
@@ -18,8 +18,8 @@ body {
 #canvasdiv
 {
   float:left;
-  width:400px;
-  height:800px;
+  /*width:400px;*/
+  /*height:400px;*/
   border:2px solid;
   background-color: red;
   padding:10px;
